<resources>
    <string name="app_name">Godaam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_calculators">Calculators</string>
    <string name="ok">OK</string>
    <string name="salary">Salary</string>
    <string name="NonSaudis">Non-Saudis</string>
    <string name="saudisNonOwners">Saudis (without business owner)</string>
    <string name="contractReason">End of contract reason</string>
    <string name="subEconomic">Sub-economic Activity</string>
    <string name="navigation_exception">No direction found from this fragment</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet_connection_description">Your connection is lost. Please check your internet connection</string>
    <string name="refresh">Refresh</string>
    <string name="identity_number">Identity Number</string>
    <string name="national_id_or_iqama">National ID or Iqama</string>
    <string name="feedback">Feedback</string>
    <string name="email">Email</string>
    <string name="numberOfNonSaudis">number-of-nonsaudis</string>
    <string name="numberOfSaudis">Number-of-saudis</string>
    <string name="feedbackMessage">Feedback Message</string>
    <string name="hint">hint</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="displacedDesc">Holders of the five-year card (Saudi passport holders who are not Saudis)</string>
    <string name="nationalitiesDesc">Palestinians with Egyptian or Turkestan documents, Balochi residents</string>
    <string name="citizens">Citizen\'s husband - citizen\'s wife - son/daughter of a citizen</string>
    <string name="categories">How many of your non-Saudi employees belong to the following categories?</string>
    <string name="workPermitDetails1">Enter the number of Saudi and non-Saudi employees from all establishments in the Establishment Group:</string>
    <string name="workPermitDetails">This tool assists with calculating the total fee for work permits and determining the number of exempt workers, if any, for a given establishment. It also guides how to calculate these amounts.</string>
    <string name="workPermitCalculator">Work Permit Calculator</string>
    <string name="workPermitPayment">Work Permit Payment</string>
    <string name="totalEmployeesDesc">According to the Ministry of Human Resources and Social Development regulations, the total number of employees in the entity stands for all employees, whether Saudi or non-Saudi, hired permanently or temporarily.</string>
    <string name="totalEmployees">The total number of employees in the entity</string>
    <string name="totalEmployee">Total number of employees</string>
    <string name="overSaudiCount">Financial compensation for over Saudi count \n99 * 800 * 12</string>
    <string name="entities">Entity\'s economic activity in Nitaqat</string>
    <string name="entitiesDesc">The International Standard Industrial Classification of All Economic Activities (ISIC4) is a global classification standard used to identify the economic activities of establishments. To determine the economic activity of an establishment in Nitaqat, select its corresponding ISIC4 code.</string>
    <string name="termsAndCondition">Compare with the expected Nitaqat if the number of employees changes</string>
    <string name="hyperLinkDesc"><u>What is Nitaqat and how is it calculated?</u></string>
    <string name="readMore">Read more on</string>
    <string name="nonSaudiEmployees">Non-Saudi employees</string>
    <string name="startDate">Contract start date</string>
    <string name="dateFormat">DD/MM/YYYY</string>
    <string name="exemptCount">Exempt by type</string>
    <string name="financialTitle">Financial compensation for equal Saudi count \n12 * 700 * 12</string>
    <string name="pvtExpat">Private expatriates</string>
    <string name="agricultureText">Working in agriculture, forestry, or fishing sector</string>
    <string name="agricultureDesc">With« a maximum of 6 expatriate workers on activity 1–5</string>
    <string name="recruitmentDesc">Rental of home workers</string>
    <string name="recruitmentText">Workers in recruitment companies</string>
    <string name="gulfTitle">Citizens of the Gulf Cooperation Council</string>
    <string name="gulfDesc">Citizens of Kuwait, Qatar, Bahrain, Oman, and the UAE.</string>
    <string name="displacedTitle">Displaced tribe members</string>
    <string name="nationalitiesTitle">Nationalities exempt from deportation</string>
    <string name="endDate">Contract end date</string>
    <string name="endOfServiceDesc2">Therefore, made it easier to calculate the end-of-service reward amount, the due date of the reward, and how to calculate it according to the rules of the Saudi labor system.</string>
    <string name="endOfServiceDesc1">The end-of-service reward is the employee’s rights over the employer in the event of terminating the contractual relationship. The Saudi legislator obliges the employer to pay it to the employee at the end of the work contract, whether the work contract is for a limited period or an unlimited period.</string>
    <string name="nitiqatDescription3">The entity’s Nitaqat corresponds to the Nationalization rate, which is based on economic activity.</string>
    <string name="nitiqatDescription1">The Nitaqat level and the Nationalization rate are calculated based on the number of Saudi and non-Saudi employees in the entity.</string>
    <string name="nitiqatDescription">With the Nitaqat calculator, business owners can analyze their establishments\' current or future performance in the labor market.</string>
    <string name="messageValidation">Please enter the feedback message</string>
    <string name="emailValidation">"Enter a valid email address</string>
    <string name="iqamaValidation" translatable="false">Please enter Iqama ID/National ID</string>
    <string name="for10Digits" translatable="false">The National ID/Iqama field must contain exactly 10 digits.</string>
    <string name="nitaqat_calculator">Nitaqat Calculator</string>
    <string name="nitaqat_description">Check the calculator for Saudi labor market regulation program.</string>
    <string name="end_of_service_reward_calculator">End of Service Reward Calculator</string>
    <string name="end_of_service_reward">End of Service Reward</string>
    <string name="end_of_service_rewards_description">Calculate your employees’ end-of-service rewards.</string>
    <string name="certificate_validation">Certificate Validation</string>
    <string name="certificateValidatorDesc">Validate certificates for your establishment, including the Nationalization Certificate.</string>
    <string name="linkingOccupationsCalculator">Linking Occupations to Nitaqat Activities</string>
    <string name="linkingValidatorCalculatorDesc">View a list of occupations related to economic activities.</string>
    <string name="work_permit_calculator">Work Permit Calculator</string>
    <string name="workPermitDesc">Calculate the total fee for work permits and determine the number of exempt workers.</string>
    <string name="calculate_nitaqat_level">Calculate Nitaqat Level</string>
    <string name="calculateEndService">Calculate End of Service Reward</string>
    <string name="results">Results</string>
    <string name="allowedQuota">Allowed quota (current balance of Employee Transfers and Visas)</string>
    <string name="current_nitaqat">Current Nitaqat</string>
    <string name="saudization">Saudization rate</string>
    <string name="saudis">Saudis</string>
    <string name="nonSaudis">Non-Saudis</string>
    <string name="currentPercentage">33.33%</string>
    <string name="platinum">Platinum</string>
    <string name="_14">14</string>
    <string name="exemptDiscount">Exempt by discount</string>
    <string name="workPermitFee">+ Work Permit Fee</string>
    <string name="red">Red</string>
    <string name="calculator">Calculator</string>
    <string name="calculateWorkPermits">Calculate work permits</string>
    <string name="contractDetails">Contract period expired, or agreement between both parties to end contract</string>
    <string name="pendingVisas">pending employee transfer requests, employees in the Ajeer program, and unused visas.</string>
    <string name="economicSectorDetails">المزارعين والصيادين والرعاة (خاصة)</string>
    <string name="economicSector">Economic sector</string>
    <string name="subActivityDetails">تربية الخيل وسباقاتها</string>
    <string name="redPercent">0% - 4.86%</string>
    <string name="lowGreenPercent">4.87% - 18.01%</string>
    <string name="mediumGreenPercent">18.02% - 23.08%</string>
    <string name="highGreenPercent">23.09% - 26.08%</string>
    <string name="platinumPercent">26.09% - 100%</string>
    <string name="lowGreen">Low Green</string>
    <string name="mediumGreen">Medium Green</string>
    <string name="highGreen">High Green</string>
    <string name="note">Note:</string>
    <string name="calculateReward">Calculated reward</string>
    <string name="recalculate"><u>Re-calculate</u></string>
    <string name="nitaqat">Nitaqat:</string>
    <string name="quotaText">Recruitment quota:</string>
    <string name="noteDesc">This calculation is only an estimate and doesn\'t take into account:</string>
    <string name="nitaqatDesc">special cases such as employees with special needs, part-time workers, or students,</string>
    <string name="_12">12</string>
    <string name="_6">6</string>
    <string name="limited_period">Limited Period</string>
    <string name="unlimited_period">Unlimited Period</string>
    <string name="sar_2100">SAR 2100</string>
    <string name="sar_2100_year">SAR 2100/year</string>
    <string name="sar00">6350.00 SAR</string>
    <string name="_01_01_2024">01/01/2024</string>
    <string name="totalAmount">Total Amount</string>
    <string name="email_address">Email</string>
    <string name="email_point">email body</string>
    <string name="sign_in">Login</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter Password/پاس ورڈ ٹائپ کریں</string>
    <string name="create_account_u">Don\'t have account?</string>
    <string name="forgotPassword_u">Forgot Password?</string>
    <string name="login"><u>Login</u></string>
    <string name="register">Register</string>
    <string name="account_created">Create Profile</string>
    <string name="create_account">Create Profile</string>
    <string name="i_already_have_an_account">Already have an account?</string>
    <string name="confirmPassword">Confirm Password\n</string>
    <string name="create_password">Create password\n</string>
    <string name="firstName">First Name</string>
    <string name="LastName">Last Name\n</string>
    <string name="accountType">Account Type\n</string>
    <string name="selectLeague">League</string>
    <string name="cash">Cash</string>
    <string name="Venmo">Venmo\n</string>
    <string name="CashApp">Cashapp</string>
    <string name="Zelle">Zelle</string>
    <string name="ZipCode">Zip Code</string>
    <string name="paymentType">Please select payment type\n</string>
    <string name="paymentError">Payment Error</string>
    <string name="LoginError">Login Error</string>
    <string name="title_home">Home</string>
    <string name="profile">Profile\n</string>
    <string name="contact">Contact</string>
    <string name="chat">Chat\n</string>
    <string name="credits">Credits</string>
    <string name="amount">$13</string>
</resources>