<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dismissListener"
            type="ballpark.buddy.android.base.data.DismissListener" />

        <import type="kotlin.Unit" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/success_bg"
        android:padding="@dimen/_8sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/errorImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/no_internet_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            tools:visibility="visible"
            android:text="@{@string/no_internet_connection}"
            tools:text="@string/no_internet_connection"
            app:layout_constraintTop_toBottomOf="@id/errorImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            android:text="@{@string/no_internet_connection}"
            tools:text="@string/no_internet_connection_description" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/doneButton"
            style="@style/CommonButtonStyle"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:padding="0dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/refresh"
            android:text="@string/refresh"
            app:layout_constraintTop_toBottomOf="@id/descriptionText"
            app:single_on_click="@{() -> dismissListener.onDismiss(Unit.INSTANCE)}" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>